// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders properly 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#edf0f5",
      "borderStyle": "solid",
      "borderWidth": "1px",
      "display": "flex",
      "flex": "1 0",
      "fontFamily": "'Raleway', sans-serif",
      "fontSize": "12px",
      "fontStretch": "100%",
      "fontWeight": "600",
      "lineHeight": "18px",
    }
  }
>
  <div
    data-radium={true}
    key=".0"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minWidth": "150px",
        "padding": "5px",
      }
    }
  />
  <div
    data-radium={true}
    key=".1"
    style={
      Object {
        "flex": "1 0",
      }
    }
  >
    <div
      className="select-value-text"
      data-radium={true}
      key=".0"
      onClick={[Function]}
      style={
        Object {
          "borderBottom": "0",
          "borderColor": "#edf0f5",
          "borderLeft": "1px",
          "borderRight": "0",
          "borderStyle": "solid",
          "borderTop": "0",
          "flex": "1 0",
          "fontWeight": "500",
          "minHeight": "20px",
          "padding": "5px",
        }
      }
    />
  </div>
  <Button
    className="select-btn-open"
    key=".2"
    onClick={[Function]}
    style={
      Object {
        "base": Object {
          ":hover": Object {
            "background": "#292929",
          },
          "background": "#222222",
          "color": "#fff",
        },
        "big": Object {
          "borderRadius": "4px",
          "fontSize": "24px",
          "fontWeight": "300",
          "minWidth": "150px",
          "padding": "15px",
        },
        "normal": Object {
          "borderRadius": "4px",
          "fontSize": "16px",
          "fontWeight": "300",
          "padding": "10px",
        },
        "primary": Object {
          "background": "#222222",
        },
        "small": Object {
          "borderRadius": "4px",
          "fontSize": "12px",
          "fontWeight": "300",
          "padding": "5px",
        },
        "warning": Object {
          "background": "#f00",
        },
      }
    }
    type="small"
  >
    ...
  </Button>
</div>
`;

exports[`Select should have correct style 1`] = `
Object {
  "optionsList": Object {
    "backgroundColor": "#35414a",
    "color": "#fff",
    "display": "flex",
    "flexDirection": "column",
    "maxHeight": "160px",
    "minWidth": "260px",
    "overflowX": "hidden",
    "overflowY": "auto",
    "position": "absolute",
    "zIndex": "1",
  },
  "optionsListItem": Object {
    ":hover": Object {
      "backgroundColor": "#5aafee",
      "color": "#fff",
    },
    "backgroundColor": "#35414a",
    "color": undefined,
    "padding": "12px 16px",
  },
  "optionsSearch": Object {
    "backgroundColor": "#35414a",
    "color": "#fff",
    "marginRight": "10px",
    "padding": "12px 16px",
  },
  "root": Object {
    "borderColor": "#edf0f5",
    "borderStyle": "solid",
    "borderWidth": "1px",
    "display": "flex",
    "flex": "1 0",
    "fontFamily": "'Raleway', sans-serif",
    "fontSize": "12px",
    "fontStretch": "100%",
    "fontWeight": "600",
    "lineHeight": "18px",
  },
  "title": Object {
    "alignItems": "center",
    "display": "flex",
    "minWidth": "150px",
    "padding": "5px",
  },
  "value": Object {
    "borderBottom": "0",
    "borderColor": "#edf0f5",
    "borderLeft": "1px",
    "borderRight": "0",
    "borderStyle": "solid",
    "borderTop": "0",
    "flex": "1 0",
    "fontWeight": "500",
    "minHeight": "20px",
    "padding": "5px",
  },
}
`;

exports[`Select value text should display provided value 1`] = `
<div
  className="select-value-text"
  data-radium={true}
  key=".0"
  onClick={[Function]}
  style={
    Object {
      "borderBottom": "0",
      "borderColor": "#edf0f5",
      "borderLeft": "1px",
      "borderRight": "0",
      "borderStyle": "solid",
      "borderTop": "0",
      "flex": "1 0",
      "fontWeight": "500",
      "minHeight": "20px",
      "padding": "5px",
    }
  }
>
  SomeValue
</div>
`;
